# jewelry-design-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  test.sh
.github/workflows/: pre-commit.yml  python-lint.yml  python-tests.yml
docs/: configuration.md  examples.md  installation.md  testing.md  usage.md  uv_workflow.md  workflow.md
scripts/: diagnose_tests.py  run_tests.py  setup_uv.sh  test.sh  test_jewelry_prompt.py  test_real_generation.py
src/python_jewelry_design_gen/: cli.py
src/python_jewelry_design_gen/generators/: __init__.py  meshy_api.py  meshy_generator.py
src/python_jewelry_design_gen/models/: __init__.py  jewelry_design.py
src/python_jewelry_design_gen/utils/: __init__.py  config.py  file_utils.py
tests/: basic_test.py  conf_test.py  config_test.py  conftest.py  generator_test.py  jewelry_design_test.py  test_config.py  test_generator.py  test_jewelry_design.py
